Add missing test and basics for javafx